// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render comments label, when comments are loaded 1`] = `
<div
  id="comments-container"
>
  <p>
    Comments are subject to our community guidelines, which can be viewed
     
    <a
      data-focusable={true}
      dir="auto"
      role="link"
    >
      here
    </a>
    .
  </p>
  <div />
</div>
`;

exports[`disabled comments 1`] = `
<div>
  <p>
    Comments for this article have been turned off
  </p>
  <p>
    Comments are subject to our community guidelines, which can be viewed
     
    <a
      data-focusable={true}
      dir="auto"
      role="link"
    >
      here
    </a>
    .
  </p>
</div>
`;

exports[`enabled comments 1`] = `
<div
  id="comments-container"
>
  <div />
</div>
`;

exports[`single comment 1`] = `
<div
  id="comments-container"
>
  <div />
</div>
`;

exports[`zero comments 1`] = `
<div
  id="comments-container"
>
  <div />
</div>
`;
